# metadata-gallery

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/core/: constants.dart
lib/src/models/: scanned_folder.dart  scanned_image.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: metadata.dart  scan.dart
lib/src/services/: database_service.dart  preferences_service.dart
lib/ui/viewmodels/: home_page_viewmodel.dart  scan_progress_indicator_viewmodel.dart  settings_page_viewmodel.dart
lib/ui/views/: home_page.dart  scan_progress_indicator.dart  settings_page.dart
lib/ui/widgets/: image_card.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: metadata.rs  mod.rs  scan.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_metadata_gallery.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_metadata_gallery.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
