[package]
name = "rust_lib_metadata_gallery"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
exif = "0.0.1"
flate2 = "1.1.2"
flutter_rust_bridge = "=2.10.0"
image = "0.25.6"
infer = "0.19.0"
png = "0.17.16"
rand = "0.9.1"
rayon = "1.10.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sha256 = "1.6.0"
walkdir = "2.5.0"
webp = "0.3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
